2007-06-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.fruchterman.reingold)
	* interfaces/R/src/rinterface.c (R_igraph_layout_fruchterman_reingold)
	(R_igraph_layout_fruchterman_reingold_3d) : weights argument added	

2007-06-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_write_graph_pajek) : 
	open file in binary format if we don't have open_memstream 

	* interfaces/R/igraph/R/layout.R (layout.reingold.tilford)
	* interfaces/R/src/rinterface.c (R_igraph_layout_reingold_tilford) :
	circular argument added	

	* interfaces/R/src/rinterface.c (R_igraph_attribute_add_vertices)
	(R_igraph_attribute_add_edges) : bug corrected

	* interfaces/R/src/rinterface.c (R_igraph_revolver_d)
	(R_igraph_revolver_ad, R_igraph_revolver_ade, R_igraph_revolver_e)
	(R_igraph_revolver_de, R_igraph_revolver_l, R_igraph_revolver_dl)
	(R_igraph_revolver_el, R_igraph_revolver_r, R_igraph_revolver_ar)
	(R_igraph_revolver_di, R_igraph_revolver_adi, R_igraph_revolver_il)
	(R_igraph_revolver_ir, R_igraph_revolver_air) : logmax calculation added

2007-05-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot)
	* interfaces/R/igraph/R/tkplot.R (tkplot) : arrow.size support added

	* interfaces/R/igraph/R/plot.R (plot) : arrow.size parameter added

2007-05-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/fit.R (power.law.fit) : error/stop bug corrected

2007-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R (edge.betweenness.community) 	
	(walktrap.community, spinglass.community)
	* interfaces/R/igraph/R/iterators.R (write.graph.dimacs)
	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
	* interfaces/R/igraph/R/minimum.spanning.tree (minimum.spanning.tree)
	* interfaces/R/igraph/R/revolver.R (revolver.d.d, revolver.p.p)
	* interfaces/R/igraph/structural.properties.R (constraint) :