@@ -42,7 +42,7 @@ export(is.igraph, are.connected, print.igraph, summary.igraph, is.directed,
 
 export(graph, graph.adjacency, graph.star, graph.tree, graph.lattice,
        graph.ring, graph.full, graph.atlas, graph.data.frame, graph.edgelist,
-       graph.extended.chordal.ring)
+       graph.extended.chordal.ring, line.graph)
 
 # games
 
