@@ -265,3 +265,15 @@ graph.extended.chordal.ring <- function(n, w) {
         as.matrix(w),
         PACKAGE="igraph")
 }
+
+line.graph <- function(graph) {
+
+  if (!is.igraph(graph)) {
+    stop("Not a graph object")
+  }
+
+  .Call("R_igraph_line_graph", graph,
+        PACKAGE="igraph")
+}
+  
+  
